# HTSCluster

./: .gitignore  LICSENSE  README.md  pyproject.toml  query.py
HTSCluster/: __init__.py  cluster.py  example.py  main.py  parser.py  prepare.py  process.py  query.py
HTSCluster/benchmark/: benchmark.py
HTSCluster/utils/: parallel.py  polars_xlsx.py  utils.py
src/: __init__.py  cluster.py  example.py
src/utils/: utils.py
tests/: conftest.py  test_df.py
tests/data/: Chembrigde_Div.csv  HTS_SG.csv  query.csv  query.xlsx  query_error.xlsx  query_multicol.xlsx
tests/data/output/: neighbors-CC1=C(C=C2NC(CC(C2=C1)C3=CCC=C3)=O)O.xlsx  neighbors-O=C(NC1=CC(O)=C(C=C21)C)CC2C3=CC=CC=C3.xlsx
